# TableDetectionMachineLearning

./: .gitignore  CMakeLists.txt
scripts/: do-train.py  extract-word-data.py  load_data.py  network_perceptron.py  plot_outputs.py  xml-to-json-table.py  xml-to-json.py
src/: helpers.cc  helpers.h  main.cc  main.cpp  main_post.cc
